--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,89 @@
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-      }
+/* ----- RESET ------- */
 
-      .header {
-        position: absolute;
-        top: 20px;
-        left: 30%;
-        z-index: 1;
-        color: white;
-      }
+html {
+  font-family: Nunito;
+}
 
-      .btnStart {
-        font: bold 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        background-color: #1e7bbe;
-        font-size: 1.1rem;
-        color: white;
-        border: none;
-        width: 200px;
-        display: block;
-        cursor: pointer;
-        padding: 10px 20px;
-        border-radius: 3px;
-      }
 
-      .btnStart:hover {
-        background-color: #4ea0da;
-      }
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #135482;
+}
+
+.map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 150%;
+  opacity: 0;
+  transition: opacity 1s ease-in 0.5s;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  margin: auto;
+  color: white;
+  letter-spacing: .15rem;
+}
+
+.mainTitle {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  opacity: 0;
+  transition: opacity 3s ease-in 3s;
+}
+
+.mainCanvas {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100vw;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnPlay {
+  background-color: #1e7bbe;
+  font-size: 1.3rem;
+  letter-spacing: .15rem;
+  color: white;
+  border: none;
+  display: block;
+  cursor: pointer;
+  padding: .7rem 3rem;
+  border-radius: 2rem;
+  opacity: 0;
+  transition: opacity 1s ease-in 6s;
+}
+
+.btnPlay:hover {
+  background-color: #4ea0da;
+}
+
+.makeVisible {
+  opacity: 1;
+}
+
+@media screen and (min-height: 670px) {
+  .map {
+    height: auto;
+  }
+
+  .mainTitle {
+    text-transform: uppercase;
+    font-size: 4rem;
+    
+  }
+}
