style title and button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,9 @@ body {
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 150%;
+  height: 180%;
   opacity: 0;
-  transition: opacity 1s ease-in 0.5s;
+  transition: opacity 1s ease-in;
 }
 
 .header {
@@ -32,15 +32,16 @@ body {
   align-items: center;
   width: 100vw;
   margin: auto;
-  color: white;
+  color: rgb(210, 161, 246);
+  text-shadow: 4px 4px 10px #0e3c5e;;
   letter-spacing: .15rem;
 }
 
 .mainTitle {
-  text-transform: uppercase;
   font-size: 3.5rem;
-  opacity: 0;
-  transition: opacity 3s ease-in 3s;
+  font-family: 'Convergence';
+  /* opacity: 0;
+  transition: opacity 3s ease-in; */
 }
 
 .mainCanvas {
@@ -51,21 +52,24 @@ body {
   z-index: 3;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .btnPlay {
   background-color: #1e7bbe;
   font-size: 1.3rem;
+  font-weight: 700;
   letter-spacing: .15rem;
   color: white;
-  border: none;
+  border: 4px solid  rgb(202, 145, 244);
   display: block;
   cursor: pointer;
   padding: .7rem 3rem;
+  margin: 4rem 0;
   border-radius: 2rem;
+  box-shadow: 4px 4px 10px #0e3c5e;
   opacity: 0;
-  transition: opacity 1s ease-in 6s;
+  transition: opacity 1s ease-in 3s;
 }
 
 .btnPlay:hover {
@@ -76,14 +80,21 @@ body {
   opacity: 1;
 }
 
-@media screen and (min-height: 670px) {
+@media screen and (min-height: 750px) {
   .map {
     height: auto;
   }
 
   .mainTitle {
-    text-transform: uppercase;
-    font-size: 4rem;
-    
+    font-size: 4rem;   
+  }
+
+}
+
+@media screen and (min-height: 900px) {
+  
+  .btnPlay {
+    font-size: 1.4rem;
+    margin: 6rem;
   }
 }
