--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body {
   border-radius: 2rem;
   box-shadow: 4px 4px 10px #0e3c5e;
   opacity: 0;
-  transition: opacity 1s ease-in 3s;
+  transition: opacity 1s ease-in .5s;
 }
 
 .continentBtn {
