--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,54 +1,26 @@
-/* ----- RESET ------- */
-
-html, body, section, article, h1, h2, p, a {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  outline: 0;
-  font: inherit;
-  text-align: inherit;
-  text-decoration: inherit;
-  color: inherit;
-  background: transparent;
-}
-
-html {
-  font-family: Nunito;
-}
-
-body {
-  background-color:  #1a4684;
-  height: 100vh;
-  margin: 0;
-}
-
-.header {
-  position: absolute;
-  left: 0;
-  top: 35vh;
-  z-index: 1;
-  text-align: center;
-  margin: auto;
-  width: 100vw;
-  font-size: clamp(3rem, 5rem, 7rem);
-  font-weight: bold;
-  color: white;
-  text-shadow: 4px 4px 10px #0e3c5e;;
-  letter-spacing: .15rem;
+.animate-header {
   animation: move-up 1.5s ease-in;
   animation-fill-mode: forwards;
-  
 }
 
 @keyframes move-up {
-  0% {
-    opacity: 0;   
-  }
-  
+  0% {}
   100% {
-    opacity: 1;
     transform: translateY(-35vh) scale(0.6, 0.6) ;
+  }
+}
 
+.animate-button {
+  animation: move-down 1.5s ease-in;
+  animation-fill-mode: forwards;
+}
+
+@keyframes move-down {
+  0% {
+    
+  }
+  100% {
+    transform: translateY(30vh) ;
   }
 }
 
@@ -59,62 +31,42 @@ body {
   width: 100%;
   height: 180%;
   opacity: 0;
-  transition: opacity .5s ease-in 1.5s;
 }
 
-.mainTitle {
-  margin: 0;
+.mapboxgl-canvas-container.mapboxgl-interactive {
+  cursor: default;
 }
 
-.mainCanvas {
-  position: absolute;
-  bottom: 0;
-  width: 100vw;
-  z-index: 3;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+.animate-appear-map {
+  animation: appear-map 1s ease-in 1s forwards;
 }
 
-.btnPlay, .continentBtn {
-  background-color: rgba(26, 70, 132, 0.6);
-  font-size: 1.3rem;
-  font-weight: 700;
-  letter-spacing: .15rem;
-  color: white;
-  border: 4px solid #D65DB1;
-  display: block;
-  cursor: pointer;
-  padding: .7rem 3rem;
-  margin: 4rem 0;
-  border-radius: 2rem;
-  box-shadow: 4px 4px 10px #0e3c5e;
-  opacity: 0;
-  transition: opacity 1s ease-in 1.5s;
+@keyframes appear-map {
+  from {
+    opacity: 0;   
+  }
+  to {
+    opacity: 1;   
+  }
 }
 
 .continentBtn {
   opacity: 1;
 }
 
-.btnPlay:hover, .continentBtn:hover {
+/* .makeVisible {
   opacity: 1;
-}
+} */
 
-.makeVisible {
-  opacity: 1;
+@keyframes move-down {
+  0% {}
+  100% {
+    transform: translateY(30vh) ;
+  }
 }
 
 @media screen and (min-height: 750px) {
   .map {
     height: auto;
-  }
-}
-
-@media screen and (min-height: 900px) {
-  
-  .btnPlay {
-    font-size: 1.4rem;
-    margin: 6rem;
   }
 }
