--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 145%;
+  height: 130%;
   opacity: 0;
 }
 
@@ -50,9 +50,44 @@
   }
 }
 
+.continentCanvas {
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  max-width: 900px;
+  margin: auto;
+  margin-bottom: 4vh;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
+
+}
+
 .continentBtn {
   opacity: 1;
+  text-align: center;
+  width: clamp(8rem, 6.8148rem + 5.9259vw, 12rem);
+  padding: 0.7rem 0;
+  margin: auto;
+  letter-spacing: 0;
 }
+
+#europeBtn {
+  order: 1
+}
+#asiaBtn {
+  order: 2
+}
+#americasBtn {
+  order: 3
+}
+#africaBtn {
+  order: 4
+}
+
+
 
 /* .makeVisible {
   opacity: 1;
@@ -65,6 +100,7 @@
   }
 }
 
+/* if screen is higher than 750px then place globe in the middle of screen */
 @media screen and (min-height: 750px) {
   .map {
     height: auto;
