--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .animate-header {
-  animation: move-up 1.5s ease-in;
+  animation: move-up .5s ease-in;
   animation-fill-mode: forwards;
 }
 
@@ -11,18 +11,29 @@
 }
 
 .animate-button {
-  animation: move-down 1.5s ease-in;
+  animation: move-down .5s ease-in;
   animation-fill-mode: forwards;
 }
 
 @keyframes move-down {
-  0% {
-    
-  }
+  0% {}
   100% {
     transform: translateY(30vh) ;
   }
 }
+
+/* @keyframes appear-lower {
+  0% {
+   
+  }
+  100% { transform: translateY(30vh)}
+}
+@keyframes appear-higher {
+  0% {
+    
+  }
+  100% {transform: translateY(-35vh) scale(0.6, 0.6)}
+} */
 
 .map {
   position: absolute;
@@ -38,7 +49,7 @@
 }
 
 .animate-appear-map {
-  animation: appear-map 1s ease-in 1s forwards;
+  animation: appear-map .2s ease-in .2s forwards;
 }
 
 @keyframes appear-map {
@@ -66,7 +77,7 @@
 }
 
 .continentBtn {
-  opacity: 1;
+  /* opacity: 1; */
   text-align: center;
   width: clamp(8rem, 6.8148rem + 5.9259vw, 12rem);
   padding: 0.7rem 0;
@@ -93,16 +104,20 @@
   opacity: 1;
 } */
 
-@keyframes move-down {
-  0% {}
-  100% {
-    transform: translateY(30vh) ;
-  }
-}
 
 /* if screen is higher than 750px then place globe in the middle of screen */
 @media screen and (min-height: 750px) {
   .map {
     height: auto;
+  }
+}
+
+@media (prefers-reduced-motion) {
+  .animate-button {
+    transform: translateY(30vh)
+  }
+
+  .animate-header {
+    transform: translateY(-35vh) scale(0.6, 0.6)
   }
 }
