--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,19 +22,6 @@
   }
 }
 
-/* @keyframes appear-lower {
-  0% {
-   
-  }
-  100% { transform: translateY(30vh)}
-}
-@keyframes appear-higher {
-  0% {
-    
-  }
-  100% {transform: translateY(-35vh) scale(0.6, 0.6)}
-} */
-
 .map {
   position: absolute;
   top: 0;
@@ -77,7 +64,6 @@
 }
 
 .continentBtn {
-  /* opacity: 1; */
   text-align: center;
   width: clamp(8rem, 6.8148rem + 5.9259vw, 12rem);
   padding: 0.7rem 0;
@@ -98,13 +84,6 @@
   order: 4
 }
 
-
-
-/* .makeVisible {
-  opacity: 1;
-} */
-
-
 /* if screen is higher than 750px then place globe in the middle of screen */
 @media screen and (min-height: 750px) {
   .map {
@@ -118,6 +97,7 @@
   }
 
   .animate-header {
-    transform: translateY(-35vh) scale(0.6, 0.6)
+    transform: translateY(-35vh) scale(0.6, 0.6);
+    /* color: hsla(208, 66%, 35%, 0.498); */
   }
 }
