--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -19,7 +19,7 @@ html, body, section, article, h1, h2, p, a, button {
   body {
     display: flex;
     justify-content: center;
-    background-color: #0e3c5e;
+    background-color: #0e2b5e;
     height: 100vh;
     margin: 0;
   }
