--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -43,14 +43,14 @@ html, body, section, article, h1, h2, p, a, button {
     animation: appear 1s ease-in;
   } */
   
-  @keyframes appear {
+  /* @keyframes appear {
     from {
       opacity: 0;   
     }
     to {
       opacity: 1;   
     }
-  }
+  } */
    
   .mainTitle {
     margin: 0;
@@ -68,7 +68,7 @@ html, body, section, article, h1, h2, p, a, button {
   .btnPlay, .continentBtn {
     display: inline;
     position: relative;
-    bottom: 30vh;
+    bottom: 29vh;
     background-color: rgba(26, 70, 132, 0.8);
     font-family: Nunito Sans;
     font-size: clamp(1.3rem, 1.1519rem + 0.7407vw, 1.8rem);
