--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -11,15 +11,33 @@ html, body, section, article, h1, h2, p, a, button {
     color: inherit;
     background: transparent;
   }
+
+  /* ----- DEFAULTS ------ */
+
+  :root {
+    --main-font-family: 'Nunito Sans', sans-serif;
+    --primary-color: #0e2b5e;
+    --primary-color-hover: rgb(26, 70, 132);
+    --transparent-bg-color: rgba(26, 70, 132, 0.8);
+    --main-font-color: white;
+    --secondary-font-color: #0e3c5e;
+    --orange: #FF9671;
+    --violet: #845EC2;
+    --peach: #F7C8A8;
+    --fuchia: #FF6F91;
+    --pink: #f475b4;
+    --magenta: #D65DB1;
+    --yellow: #FFC75F;
+  }
   
   html {
-    font-family: Righteous;
+    font-family: var(--main-font-family);
   }
   
   body {
     display: flex;
     justify-content: center;
-    background-color: #0e2b5e;
+    background-color: var(--primary-color);
     height: 100vh;
     margin: 0;
   }
@@ -34,8 +52,8 @@ html, body, section, article, h1, h2, p, a, button {
     width: 100vw;
     font-size: clamp(5rem, 3.5185rem + 7.4074vw, 10rem);
     font-weight: bold;
-    color: white;
-    text-shadow: 4px 4px 15px #0e3c5e;;
+    color: var(--main-font-color);
+    text-shadow: 4px 4px 15px var(--primary-color);;
     letter-spacing: .4rem;
   }
   
@@ -54,6 +72,7 @@ html, body, section, article, h1, h2, p, a, button {
    
   .mainTitle {
     margin: 0;
+    font-family: var(--main-font-family);
   }
   
   .playBtnCanvas {
@@ -69,17 +88,17 @@ html, body, section, article, h1, h2, p, a, button {
     display: inline;
     position: relative;
     bottom: 29vh;
-    background-color: rgba(26, 70, 132, 0.8);
+    background-color: var(--transparent-bg-color);
     font-family: Nunito Sans;
     font-size: clamp(1.3rem, 1.1519rem + 0.7407vw, 1.8rem);
     font-weight: 700;
     letter-spacing: .2rem;
-    color: white;
-    border: 4px solid #FF9671;
+    color: var(--main-font-color);
+    border: 4px solid var(--orange);
     cursor: pointer;
     padding: .7rem 3rem;
     border-radius: 2rem;
-    box-shadow: 4px 4px 15px #0e3c5e;
+    box-shadow: 4px 4px 15px var(--primary-color);
     transition: opacity 1s ease-in 1.5s;
   }
 
@@ -88,7 +107,7 @@ html, body, section, article, h1, h2, p, a, button {
   }
   
   .btnPlay:hover, .continentBtn:hover {
-    background-color: rgb(26, 70, 132);
+    background-color: var(--primary-color-hover);
   }
   
   @media screen and (min-height: 900px) {
