--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* ------------ Main landing page -------------  */
 
-.animate-header {
+/* .animate-header {
   animation: move-up .5s ease-in;
   animation-fill-mode: forwards;
 }
@@ -22,14 +22,14 @@
   100% {
     transform: translateY(29vh) ;
   }
-}
+} */
 
 .map {
   position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 120%;
+  height: 110%;
   opacity: 0;
 }
 
@@ -38,17 +38,17 @@
 }
 
 .animate-appear-map {
-  animation: appear .2s ease-in .2s forwards;
+  animation: appear .2s ease-in forwards;
 }
 
-@keyframes appear {
+/* @keyframes appear {
   from {
     opacity: 0;   
   }
   to {
     opacity: 1;   
   }
-}
+} */
 
 /* if screen is higher than 750px then place globe in the middle of screen */
 @media screen and (min-height: 750px) {
@@ -57,16 +57,15 @@
   }
 }
 
-@media (prefers-reduced-motion) {
+/* @media (prefers-reduced-motion) {
   .animate-button {
     transform: translateY(30vh)
   }
 
   .animate-header {
     transform: translateY(-35vh) scale(0.6, 0.6);
-    /* color: #3aa956; */
   }
-}
+} */
 
 /* ----------- Continent buttons ----------- */
 
@@ -91,6 +90,7 @@
   padding: 0.7rem 0;
   margin: auto;
   letter-spacing: 0;
+  animation: appear .8s ease-in forwards
 }
 
 #europeBtn {
@@ -110,6 +110,8 @@
 
 .question {
   font-weight: bold;
-  font-size: clamp(4rem, 3.4074rem + 2.963vw, 6rem);
+  font-size: var(--question-font-size);
   letter-spacing: 0;
+  opacity: 0;
+  animation: appear 1s ease-in forwards
 }
