--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,11 @@
 /* ------------ Main landing page -------------  */
 
-/* .animate-header {
-  animation: move-up .5s ease-in;
-  animation-fill-mode: forwards;
-}
-
-@keyframes move-up {
-  0% {}
-  100% {
-    transform: translateY(-35vh) scale(0.6, 0.6) ;
-  }
-}
-
-.animate-button {
-  animation: move-down .5s ease-in;
-  animation-fill-mode: forwards;
-}
-
-@keyframes move-down {
-  0% {}
-  100% {
-    transform: translateY(29vh) ;
-  }
-} */
-
 .map {
   position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 110%;
+  height: 100%;
   opacity: 0;
 }
 
@@ -41,6 +17,9 @@
   animation: appear .2s ease-in forwards;
 }
 
+.choose {
+  transform: scale(0.8);
+}
 /* @keyframes appear {
   from {
     opacity: 0;   
@@ -51,19 +30,9 @@
 } */
 
 /* if screen is higher than 750px then place globe in the middle of screen */
-@media screen and (min-height: 750px) {
+/* @media screen and (min-height: 750px) {
   .map {
     height: auto;
-  }
-}
-
-/* @media (prefers-reduced-motion) {
-  .animate-button {
-    transform: translateY(30vh)
-  }
-
-  .animate-header {
-    transform: translateY(-35vh) scale(0.6, 0.6);
   }
 } */
 
@@ -94,24 +63,83 @@
 }
 
 #europeBtn {
-  order: 1
+  order: 1;
+  border-color: var(--violet);
 }
+
 #asiaBtn {
-  order: 2
+  order: 2;
+  border-color: var(--fuchsia);
 }
+
 #americasBtn {
   order: 3
 }
+
 #africaBtn {
-  order: 4
+  order: 4;
+  border-color: var(--yellow);
 }
 
 /* ------------- Game -------------- */
 
+.exitBtn {
+  position: relative;
+  /* background-color: var(--transparent-bg-color); */
+  font-size: var(--utilities-font-size);
+  text-shadow: 0 0 2px var(--primary-color);
+  font-weight: 400;
+  color: var(--main-font-color);
+  /* border: 1.5px solid var(--ocean);
+  box-shadow: 4px 4px 15px var(--primary-color); */
+  text-align: center;
+  margin: 1rem 0 0 1rem;
+  cursor: pointer;
+}
+
+.exitBtn:hover {
+  /* color: var(--main-font-color); */
+  border-bottom: 2px solid var(--main-font-color);
+}
+
 .question {
+  display: inline-block;
+  margin: 1rem 0;
   font-weight: bold;
   font-size: var(--question-font-size);
   letter-spacing: 0;
   opacity: 0;
   animation: appear 1s ease-in forwards
+}
+
+.country {
+  display: inline;
+  position: relative;
+  background-color: var(--secondary-bg-color);
+  font-size: var(--country-font-size);
+  font-weight: 700;
+  color: var(--secondary-font-color);
+  box-shadow: 4px 4px 15px var(--primary-color);
+  text-shadow: none;
+  padding: .2rem 1.8rem;
+  margin: auto;
+  border-radius: 1.5rem;
+  opacity: 0;
+  animation: appear .2s ease-in forwards
+}
+
+.countryEurope {
+  border: 3px solid var(--violet)
+}
+
+.countryAfrica {
+  border: 3px solid var(--yellow)
+}
+
+.countryAsia {
+  border: 3px solid var(--fuchsia)
+}
+
+.countryAmericas {
+  border: 3px solid var(--orange);
 }
