add score and restart button

--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -75,11 +75,11 @@ html, body, section, article, h1, h2, p, a, button {
     }
   }
 
-  .utilities {
+  .home {
     
   }
 
-  .sound {
+  .score {
     /* width: 3rem;
     height: 3rem;
     color: var(--main-font-color) */
