--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -1,6 +1,6 @@
 /* ----- RESET ------- */
 
-html, body, section, article, h1, h2, p, a, button {
+html, body, section, article, h1, h2, p, a, button, ul {
     margin: 0;
     /* margin-block-start: 0;
     margin-block-end: 0; */
@@ -12,6 +12,14 @@ html, body, section, article, h1, h2, p, a, button {
     text-decoration: inherit;
     color: inherit;
     background: transparent;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+
+  li {
+    display: inline-block;
   }
 
   /* ----- DEFAULTS ------ */
@@ -26,7 +34,7 @@ html, body, section, article, h1, h2, p, a, button {
     --secondary-font-color: rgb(14, 60, 94);
     --button-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
     --title-font-size: clamp(3rem, 2.8519rem + 0.7407vw, 3.5rem);
-    --question-font-size: clamp(1.8rem, 1.7407rem + 0.2963vw, 2rem);
+    --question-font-size: clamp(1.7rem, 1.486rem + 0.571vw, 2rem);
     --country-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
     --utilities-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
     /* --light-grey: rgb(240, 240, 240);
@@ -80,12 +88,12 @@ html, body, section, article, h1, h2, p, a, button {
 
   .exit {
     position: absolute;
-    top: 2vh;
+    top: 1.5vh;
     left: 2vw;
     z-index: 1;
     font-weight: bold;
-    width: 2rem;
-    height: 2.5rem;
+    width: 1.9rem;
+    height: 2.4rem;
     color: var(--main-font-color);
     filter: drop-shadow( 0 0 10px var(--primary-color));
     font-family: var(--main-font-family);
