--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,20 +14,74 @@
 }
 
 .animate-appear-map {
-  animation: appear .2s ease-in forwards;
+  animation: appear .2s forwards;
+}
+
+.howToPlayCanvas {
+  position: absolute;
+  align-self: center;
+  width: 20rem;
+  height: 20rem;
+  background-color: var(--transparent-bg-color);
+  border: 1px solid var(--main-font-color);
+  border-radius: 50%;
+  box-shadow: 4px 4px 15px var(--main-font-color) inset;
+  padding: 2rem;
+  font-size: var(--utilities-font-size);
+  color: var(--main-font-color);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  opacity: 0;
+  animation: appear 1s forwards;
+}
+
+.firstRule {
+  margin: .5rem 0;
+  opacity: 0;
+  animation: appear 1s forwards;
+}
+
+.secondRule {
+  margin: .5rem 0;
+  opacity: 0;
+  animation: appear 1s 1.5s forwards;
+}
+
+.thirdRule {
+  margin: .5rem 0;
+  opacity: 0;
+  animation: appear 1s 3s forwards;
+}
+
+.okay {
+  width: 4.8rem;
+  height: 4.8rem;
+  margin-top: 1.5rem;
+  border-radius: 50%;
+  padding: 0.5rem 0;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 4px 4px 15px var(--main-font-color) inset;
+  opacity: 0;
+  animation: appear 1s 4.5s forwards;
+}
+
+.okay:hover {
+  background-color: var(--primary-color-hover);
 }
 
 .choose {
   position: absolute;
-  top: 4vh;
+  top: 6vh;
   z-index: 1;
   font-weight: bold;
   color: var(--main-font-color);
   text-shadow: 0 0 15px var(--primary-color);
   font-family: var(--main-font-family);
-  font-size: var(--question-font-size);
-  /* opacity: 0;
-  animation: appear .5s ease-in forwards */
+  font-size: var(--choose-font-size);
   animation: bump 1s ease-in-out;
 }
 
@@ -64,7 +118,6 @@
   color: var(--main-font-color);
   cursor: pointer;
   border-radius: 2rem;
-  box-shadow: 4px 4px 15px var(--primary-color);
 }
 
 .continentBtn:hover {
@@ -74,20 +127,24 @@
 #europeBtn {
   order: 1;
   border-color: var(--violet);
+  box-shadow: 2px 2px 10px var(--violet) inset, 4px 4px 15px var(--primary-color);
 }
 
 #asiaBtn {
   order: 2;
   border-color: var(--fuchsia);
+  box-shadow: 2px 2px 10px var(--fuchsia) inset, 4px 4px 15px var(--primary-color);
 }
 
 #americasBtn {
-  order: 3
+  order: 3;
+  box-shadow: 2px 2px 10px var(--orange) inset, 4px 4px 15px var(--primary-color);
 }
 
 #africaBtn {
   order: 4;
   border-color: var(--yellow);
+  box-shadow: 2px 2px 10px var(--yellow) inset, 4px 4px 15px var(--primary-color);
 }
 
 /* ------------- Game -------------- */
@@ -113,8 +170,6 @@
 }
 
 .correct {
-  /* color: var(--correct); */
-  /* stroke: var(--correct); */
   fill: var(--correct);
   display: inline-block;
   width: 2rem;
@@ -124,9 +179,7 @@
 }
 
 .incorrect {
-  /* color: var(--incorrect); */
   stroke: var(--incorrect);
-  /* fill: var(--incorrect); */
   display: inline-block;
   width: 2rem;
   height: 2rem;
@@ -173,7 +226,7 @@
     transform: scale(1);
   }
 
-  30% {
+  25% {
     transform: scale(1.1);
   }
 
@@ -198,12 +251,12 @@
   cursor: pointer;
   padding: .7rem 2rem;
   border-radius: 2rem;
-  box-shadow: 4px 4px 15px var(--primary-color);
+  box-shadow: 2px 2px 10px var(--main-font-color) inset, 
+  4px 4px 15px var(--primary-color);
   opacity: 0;
   animation: appear 1s ease-in forwards;
 }
 
-/* .animate-appear {
-  display: inline;
-  animation: appear .2s ease-in forwards;
-} */
+.newGame:hover {
+  background-color: var(--primary-color-hover);
+}
