--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -37,6 +37,8 @@ html, body, section, article, h1, h2, p, a, button, ul {
     --choose-font-size: clamp(2.2rem, 2.0571rem + 0.7143vw, 2.7rem);
     --question-font-size: clamp(1.7rem, 1.486rem + 0.571vw, 2rem);
     --country-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
+    --high-score-title-font-size: clamp(1.5rem, 1.4429rem + 0.2857vw, 1.7rem);
+    --high-score-font-size: clamp(1.3rem, 1.2429rem + 0.2857vw, 1.5rem);
     --utilities-font-size: clamp(1.2rem, 1.1407rem + 0.2963vw, 1.4rem);
     /* --light-grey: rgb(240, 240, 240);
     --ocean: rgb(86, 179, 220); */
