--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@
 }
 
 .animate-bump {
-  animation: bump 1s ease-in-out;
+  animation: bump 1s;
 }
 
 @keyframes bump {
@@ -296,7 +296,7 @@
   width: 100vw;
   height: 100vh;
   z-index: 2;
-  background-color: rgba(22, 29, 50, 0.4);
+  background-color: rgba(22, 29, 50, 0.5);
 }
 
 .highScoresCanvas {
@@ -327,18 +327,51 @@
 }
 
 .highScoresTitle {
-  margin: 3rem 0 .5rem;
+  margin: 3rem 0 1.5rem;
   font-size: var(--high-score-title-font-size);
   font-weight: bold;
+  text-transform: uppercase;
+  filter: drop-shadow( 0 0 10px var(--primary-color));
 }
 
 .score {
   font-size: var(--high-score-font-size);
   font-weight: bold;
+  text-transform: uppercase;
+  filter: drop-shadow( 0 0 .5px var(--primary-color));
 }
 
-.repositionBtn {
-  position: unset;
-  margin-top: 1.5rem;
-  padding: 0.7rem 1rem;
+.scoreEurope {
+  color: var(--violet)
+}
+
+.scoreAsia {
+  color: var(--fuchsia)
+}
+.scoreAfrica {
+  color: var(--yellow)
+}
+.scoreAmericas {
+  color: var(--orange)
+}
+
+.highScoresOkay {
+  margin: 1.5rem;
+  padding: 0.5rem 1.5rem;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+  border-radius: 2rem;
+  box-shadow: 5px 5px 10px var(--primary-color) inset, 
+  4px 4px 15px var(--primary-color);
+  font-size: var(--high-score-font-size);
+  font-weight: bold;
+}
+
+.highScoresOkay:hover {
+  color: var(--main-font-color);
+  background-color: var(--primary-color-hover);
+  box-shadow: 2px 2px 5px var(--main-font-color) inset, 
+  5px 5px 15px var(--primary-color);
+  border: 2px solid var(--main-font-color)
 }
